Fix tagline spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -8,8 +8,7 @@
 
 @font-face {
   font-family: "Cantarell";
-  src: url("/assets/fonts/cantarell-regularitalic-webfont.woff2")
-      format("woff2"),
+  src: url("/assets/fonts/cantarell-regularitalic-webfont.woff2") format("woff2"),
     url("/assets/fonts/cantarell-regularitalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: italic;
@@ -36,6 +35,7 @@
   color: #e8ebf3;
   text-shadow: none;
 }
+
 ::selection {
   background: #bc1040;
   color: #e8ebf3;
@@ -56,6 +56,7 @@ body {
   margin: 1rem 0 0;
   padding: 0 1rem;
 }
+
 @media (min-width: 25rem) {
   body {
     max-width: 70rem;
@@ -99,7 +100,7 @@ p {
   padding: 0.5rem 1.5rem 0.6rem;
 }
 
-.button + p {
+.button+p {
   margin-top: 1rem;
 }
 
@@ -110,13 +111,16 @@ p {
   top: 0;
   left: 0;
 }
+
 .ratio {
   position: relative;
 }
+
 .ratio::before {
   content: "";
   display: block;
 }
+
 .ratio--16x9::before {
   padding-bottom: 56.25%;
 }
@@ -126,14 +130,17 @@ p {
   font-size: 1.4em;
   margin: 0;
 }
+
 @media (min-width: 50rem) {
   .pullquote {
     font-size: 1.8em;
   }
 }
+
 .pullquote footer {
   font-size: 0.8em;
 }
+
 .pullquote footer:before {
   content: "—";
 }
@@ -142,6 +149,7 @@ p {
   font-family: "ChunkFive", serif;
   font-size: 0.7em;
 }
+
 @media (min-width: 37rem) {
   .header {
     display: grid;
@@ -150,11 +158,13 @@ p {
     align-items: center;
   }
 }
+
 @media (min-width: 45rem) {
   .header {
     font-size: 0.8em;
   }
 }
+
 @media (min-width: 60rem) {
   .header {
     font-size: 1em;
@@ -165,16 +175,19 @@ p {
 .header__content {
   text-align: center;
 }
+
 .header__image {
   display: block;
   width: 20rem;
   margin: 0 auto;
 }
+
 @media (min-width: 37rem) {
   .header__content {
     grid-column: content;
     text-align: right;
   }
+
   .header__image {
     grid-column: image;
     grid-row: 1 / 3;
@@ -189,16 +202,19 @@ p {
   line-height: 1.4;
   grid-column: image;
 }
+
 .header__title {
   font-size: 4.6em;
   line-height: 1.1;
   margin: 0.7rem 0 0.3rem;
 }
+
 .header__subtitle {
   font-size: 2em;
   line-height: 1.1;
   margin: 0.7rem 0 0.3rem;
 }
+
 .header__date {
   display: block;
   font-size: 2.9em;
@@ -211,16 +227,19 @@ p {
   border: 0px solid rgba(75, 86, 128, 0.6);
   border-width: 0.7rem 0;
 }
+
 @media (min-width: 60rem) {
   .nav {
     margin-left: 7rem;
   }
 }
+
 @media (min-width: 48rem) {
   .nav {
     margin-bottom: 2rem;
   }
 }
+
 .nav__list {
   display: flex;
   font-family: "KenyanCoffee", sans-serif;
@@ -230,9 +249,11 @@ p {
   margin: 0 -1rem;
   padding: 0.2rem 0;
 }
+
 .nav__list li {
   margin: 0 1rem;
 }
+
 .nav__list a:hover {
   background: none;
   color: #bc1040;
@@ -242,12 +263,14 @@ p {
   border-bottom: 0.7rem solid rgba(75, 86, 128, 0.6);
   padding: 2.5rem 0;
 }
+
 .section--pullquote img {
   display: block;
   width: 20rem;
   margin: 0.5rem 0 -2.5rem auto;
   align-self: flex-end;
 }
+
 @media (min-width: 35rem) {
   .section--pullquote {
     display: grid;
@@ -257,49 +280,60 @@ p {
 
   .lyrics {
     -moz-column-count: 2;
-         column-count: 2;
+    column-count: 2;
     -moz-column-gap: 2rem;
-         column-gap: 2rem;
+    column-gap: 2rem;
   }
 }
+
 @media (min-width: 45rem) {
   .section {
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: [title] 10rem [content] 1fr;
   }
+
   .section--about {
     grid-template-columns: [title] 10rem [content] 1fr [cta] 12rem;
   }
+
   .section--schedule {
     grid-template-columns: [title] 1fr;
   }
+
   .section--dance {
     grid-template-areas:
       "title content"
       "title videos";
   }
+
   .section--pullquote {
     grid-template-columns: [content] 1fr [image] 1fr;
   }
 }
+
 @media (min-width: 60rem) {
   .section {
     grid-template-columns: [title] 20rem [content] 1fr;
   }
+
   .section--about {
     grid-template-columns: [title] 20rem [content] 1fr [cta] 12rem;
   }
+
   .section--schedule {
     grid-template-columns: [title] 1fr;
   }
+
   .section--pullquote {
     grid-template-columns: [content] 2fr [image] 1fr;
   }
 }
+
 .prereg .section--about .section__content {
   grid-column: 2 / 4
 }
+
 .section__title {
   font-family: "KenyanCoffee", sans-serif;
   font-size: 2.4em;
@@ -313,10 +347,12 @@ p {
   grid-gap: 2rem;
   grid-column: videos;
 }
+
 .section__video {
   width: 100%;
   max-width: 41rem;
 }
+
 @media (min-width: 45rem) {
   .section__videos .section__videos--multiple {
     grid-template-columns: 1fr 1fr;
@@ -331,40 +367,48 @@ p {
   margin: 0;
   padding: 0;
 }
+
 .event {
   margin: 0;
   padding: 0;
 }
+
 @media (min-width: 45rem) {
   .events {
     background: rgba(207, 194, 135, 0.6);
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0 -2rem;
   }
+
   .event {
     background: #1f2437;
     padding: 0 2rem;
   }
 }
+
 @media (min-width: 60rem) {
   .events {
     margin: 0 -3rem;
   }
+
   .event {
     padding: 0 3rem;
   }
 }
+
 .event__date {
   line-height: 1.4;
   text-transform: uppercase;
   margin: 0;
 }
+
 .event__time {
   font-size: 0.9em;
   line-height: 1.4;
   text-transform: uppercase;
   margin: 0;
 }
+
 .event__title {
   color: #a18868;
   font-size: 1.3em;
@@ -397,10 +441,12 @@ p {
   width: 100%;
   transition: border 0.3s ease-out;
 }
+
 .regform__text::-moz-selection {
   background: #4c5683;
   color: #fff;
 }
+
 .regform__text::selection {
   background: #4c5683;
   color: #fff;
@@ -450,16 +496,22 @@ p {
     justify-content: flex-start;
     width: 100%;
   }
+
   .regform__control-group .regform__text {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border-right-width: 0;
   }
+
   .regform__control-group .regform__button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-left-width: 0;
   }
+}
+
+.line {
+  display: inline-block;
 }
 
 .footer {
@@ -484,16 +536,16 @@ p {
   border-radius: 0.3rem;
 }
 
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity > a, 
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity > a {
-  color:#4c5683;
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity>a,
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity>a {
+  color: #4c5683;
 }
 
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity > a:hover, 
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity > a:hover,
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity > a:focus, 
-.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity > a:focus {
-  color:#5dbfc8;
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity>a:hover,
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity>a:hover,
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--decrement-quantity>a:focus,
+.tito-widget .tito-widget-form .tito-release .tito-quantity .tito-release--increment-quantity>a:focus {
+  color: #5dbfc8;
   background: unset;
   transition: color 0.25s ease-out;
 }
